--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="boxRow">
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -39,7 +39,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -47,7 +47,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -55,7 +55,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -63,7 +63,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -71,7 +71,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -79,7 +79,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -87,7 +87,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
@@ -95,7 +95,7 @@
             </article>
             <article class="articleBox">
                 <div class="imgBox">
-                    <img src="/PIZZA/assets/45.jpg" alt="pizza" class="image">
+                    <img src="assets/45.jpg" alt="pizza" class="image">
                 </div>
                 <div class="Heading">Cheese Pizza</div>
                 <div class="Details">Get our Manhattan Classic Cheese Pizza with your choice of sauce and crust.</div>
